[build-system]
requires = ["setuptools>=64", "scikit-build-core>=0.5", "pybind11>=2.12", "numpy>=1.24"]
build-backend = "setuptools.build_meta"

[project]
name = "litevo"
version = "2.0.0"
description = "Industrial-grade monocular visual SLAM system"
requires-python = ">=3.10"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
authors = [
    {name = "LiteVO Contributors"}
]
keywords = ["slam", "visual-odometry", "computer-vision", "robotics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[project.optional-dependencies]
dev = ["pytest>=7", "numpy>=1.24", "opencv-python>=4.8"]

[tool.setuptools.packages.find]
include = ["litevo*"]
